using dark theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,7 @@ set -g @plugin 'sainnhe/tmux-fzf'
 ############################################
 ### Rose Pine theme starts here 
 set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'dawn' # Options are 'main', 'moon' or 'dawn'
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
 # To update plugin for future revisions or bug fixes, do the "Prefix + U" keycombo
 ### Rose Pine theme ends here
 ############################################
